Update openapi.json
